--- a/ProyectoBase/src/app/auth/registrar/registrar.page.html
+++ b/ProyectoBase/src/app/auth/registrar/registrar.page.html
@@ -4,6 +4,33 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
-</ion-content>
+  <ion-content  color="otro">
+    <form  #form="ngForm" (ngSubmit)="register(form)">
+      <ion-grid >
+        <ion-row color="otro" justify-content-center>
+          <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
+            <div text-center>
+              <h3 style="color: #fff" >Crea tu cuenta</h3>
+            </div>
+            <div padding>
+              <ion-item>
+                <ion-input  name="name" type="text" placeholder="Nombre" ngModel required></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-input name="email" type="email" placeholder="Correo" ngModel required></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-input name="password" type="password" placeholder="Contraseña" ngModel required></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-input name="confirm" type="password" placeholder="Repetir contraseña" ngModel required></ion-input>
+              </ion-item>
+            </div>
+            <div padding>
+              <ion-button  size="large"  shape="round" type="submit" [disabled]="form.invalid" expand="block">Registrar</ion-button>
+            </div>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </form>
+  </ion-content>
