--- a/ProyectoBase/src/app/auth/login/login.page.scss
+++ b/ProyectoBase/src/app/auth/login/login.page.scss
@@ -1,21 +1,11 @@
-ion-content{
-    $color:(
-        primary: #488aff,
-        otro2: #15d0b3
-    );
-}
-
-ion-content{
-    background: #15d0b3;
-}
 
 ion-item{
-    --background: #fff;
-    --color: #15d0b3;
+    --background: #24d6ea;
+    --color: #fff;
 }
 ion-button{
     --background: #fff;
-    --color: #15d0b3;
+    --color: #24d6ea;
 }
 
 a{
