--- a/ProyectoBase/src/app/auth/registrar/registrar.page.html
+++ b/ProyectoBase/src/app/auth/registrar/registrar.page.html
@@ -1,33 +1,32 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>registrar</ion-title>
-  </ion-toolbar>
-</ion-header>
 
-  <ion-content  color="otro">
-    <form  #form="ngForm" (ngSubmit)="register(form)">
+  <ion-content  color="secondary">
+    <form  [formGroup]="registrarForm" (ngSubmit)="registrar()"> <!-- oooh -->
       <ion-grid >
-        <ion-row color="otro" justify-content-center>
+        <ion-row color="primary" justify-content-center>
           <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
             <div text-center>
               <h3 style="color: #fff" >Crea tu cuenta</h3>
             </div>
             <div padding>
               <ion-item>
-                <ion-input  name="name" type="text" placeholder="Nombre" ngModel required></ion-input>
+                <ion-input  formControlName="nombre" type="text" placeholder="Nombre" ngModel required></ion-input>
+                <div color = "error" *ngIf="f.nombre.errors">*</div>
               </ion-item>
               <ion-item>
-                <ion-input name="email" type="email" placeholder="Correo" ngModel required></ion-input>
+                <ion-input formControlName="correo" type="email" placeholder="Correo" ngModel required></ion-input>
+              <div color = "error" *ngIf="f.correo.errors">*</div>
               </ion-item>
               <ion-item>
-                <ion-input name="password" type="password" placeholder="Contraseña" ngModel required></ion-input>
+                <ion-input formControlName="contrasena" type="password" placeholder="Contraseña" ngModel required></ion-input>
+                <div color = "error" *ngIf="f.contrasena.errors">*</div>
               </ion-item>
               <ion-item>
-                <ion-input name="confirm" type="password" placeholder="Repetir contraseña" ngModel required></ion-input>
+                <ion-input formControlName="confirmacionContrasena" type="password" placeholder="Repetir contraseña" ngModel required></ion-input>
+                <div color = "error" *ngIf="f.confirmacionContrasena.errors">*</div>
               </ion-item>
             </div>
             <div padding>
-              <ion-button  size="large"  shape="round" type="submit" [disabled]="form.invalid" expand="block">Registrar</ion-button>
+              <ion-button  size="large"  shape="round" type="submit" [disabled]="registrarForm.invalid" expand="block"><b>Registrar</b></ion-button>
             </div>
           </ion-col>
         </ion-row>
