--- a/ProyectoBase/src/app/auth/registrar/registrar.page.scss
+++ b/ProyectoBase/src/app/auth/registrar/registrar.page.scss
@@ -1,19 +1,9 @@
 ion-item{
-    --background: #15d0b3;
+    --background: #24d6ea;
     --color: #fff;
-}
-
-ion-content {
-    $color:(
-        --otro: #15d0b3
-    );
-}
-
-ion-content{
-    --background: #15d0b3;
 }
 
 ion-button{
     --background: #fff;
-    --color: #15d0b3;
+    --color: #24d6ea;
 }
