--- a/ProyectoBase/src/app/auth/login/login.page.html
+++ b/ProyectoBase/src/app/auth/login/login.page.html
@@ -1,7 +1,7 @@
 
 <ion-content>
   <ion-content color="secondary" padding>
-    <form #form="ngForm" (ngSubmit)="login(form)">
+    <form [formGroup]="loginForm" (ngSubmit)="login()">
       <ion-grid>
         <ion-row color="primary" justify-content-center>
           <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
@@ -12,14 +12,14 @@
             </div>
             <div padding>
               <ion-item>
-                <ion-input name="email" type="email" placeholder="Correo" ngModel required></ion-input>
+                <ion-input formControlName="correo" type="email" placeholder="Correo" ngModel required></ion-input>
               </ion-item>
               <ion-item>
-                <ion-input name="password" type="password" placeholder="Contraseña" ngModel required></ion-input>
+                <ion-input formControlName="contrasena" type="password" placeholder="Contraseña" ngModel required></ion-input>
               </ion-item>
             </div>
             <div padding>
-              <ion-button size="large" shape="round" type="submit" [disabled]="form.invalid" expand="block"><b>Entrar</b></ion-button>
+              <ion-button shape="round" size="large" type="submit" [disabled]="loginForm.invalid" expand="block">Entrar</ion-button>
             </div>
           </ion-col>
         </ion-row>
